--- a/UI/public/reports.html
+++ b/UI/public/reports.html
@@ -37,11 +37,11 @@
         <h1 class="App-title" style="text-align: center">eReviews testing reports of
 
             <form action="" style="margin-top: 5px">
-                <select name="user" id="user" style="margin-left: 15">
-                    <option value="sadeck">Sadeck YN</option>
-                    <option value="David Thompson">David Thompson</option>
-                    <option value="LA Hupe">LA Hupe</option>
-                    <option value="Thien Thong">Thien Thong</option>
+                <select name="user" id="userSelected" style="margin-left: 15">
+                    <option value="Sadeck_YN">Sadeck YN</option>
+                    <option value="David_Thompson">David Thompson</option>
+                    <option value="LA_Hupe">LA Hupe</option>
+                    <option value="Thien_Thong">Thien Thong</option>
                 </select>
             </form>
 
